<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e5e5e5"
    android:orientation="vertical"
    tools:context=".activity.NetworkActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="PERMISSIONS"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text=">"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="NETWORK"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text=">"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="DEVICE DETAILS"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/round_shape"
        android:orientation="vertical">

        <EditText
            android:id="@+id/deviceNameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/device_name_hint"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/round_shape"
        android:orientation="vertical">

        <EditText
            android:id="@+id/groupIdEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/group_id"
            android:inputType="number"
            android:text=""/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/round_shape"
        android:orientation="vertical">

        <EditText
            android:id="@+id/groupKeyEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/group_key"
            android:inputType="textPassword"
            android:text=""/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/submitGroupBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:text="Next"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>